fix white space on scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 html {
-  min-height: 100dvh;
+  height: calc(100% + 60px);
+  min-height: calc(100% + 60px);
 }
 
 .responsive-grid {
